Avoid possibly uninitialised out @rect from gtk_popover_get_pointing_to()
@dboles
Submitted by Daniel Boles Link to original bug (#786888)
Description
If the passed out-parameter rect is NULL, gtk_popover_get_pointing_to() silently does nothing. However, the doc comment doesn't make clear whether passing a NULL rect is really valid.
Also, it says "Returns: %TRUE if a rectangle to point to was set". What it actually returns right now is whether priv->has_pointing_to, regardless of whether the input rect existed to be set.
Version: 3.22.x